// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`friendship POST /accept-request 1`] = `
{
  "data": {
    "accepted": true,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test request",
    "requesterId": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /deny-request 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test request",
    "requesterId": "baa0e8bc-385f-4314-9580-29855aff2229",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /remove-friend 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test",
    "requesterId": "2db640fd-7aa4-4bba-8ee6-3935b700297a",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /send-request 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-08-10T10:10:10.00000001Z",
    "message": "test add",
    "requesterId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "responderId": "48683858-796c-45ad-a361-9e3d6d003354",
    "viewed": false,
  },
  "ok": true,
}
`;
